Fixed container and spacing issues for migration

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -2,21 +2,36 @@
 // Migration Styles
 // -----------------------------
 
+
+
+
 #migrated-site {
 
-  // Stylseheet overrides
+
+
+
+  // Stylesheet overrides
   // -----------------------------
 
+  [data-widget-type="feature"] {
+    margin-bottom: 10px;
+  }
+
+  
   // Template wrapper (replace with corresponding template classes)
-  .main.wrapper {
-    width: 100%;
+  [role="main"] .container {
+    padding: 0;
     max-width: 100%;
-    margin: 0;
+    width: 100%;
   }
 
   // Main content spacing (replace with corresponding template class)
-  .main {
+  [role="main"] {
     padding: 0;
+  }
+
+  .bk-footer {
+    margin-top: 0;
   }
 
   // Widget overflow to allow 10S overlays to display correctly
@@ -25,58 +40,40 @@
   }
 
 
+
+
   // Migration styles
   // -----------------------------
 
+
   // Replace with corresponding template values
   @container-width: 1400px;
-
-  @spacing__first--desktop: 0px;
+  @spacing__first--desktop: 20px;
   @spacing__first--tablet:  0px;
   @spacing__first--mobile:  0px;
+  @spacing--other: 20px;
 
-  @spacing--other: 30px;
 
   // Applies spacing to widgets to mimic container width
   .empty-zone,
   #page-zones__main:empty,
   #page-zones__main > .widget:not(.row),
   .row:not(.widget):not(.row--width-no-padding) .row__container {
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
     max-width: @container-width;
-    width: 100%;
-  }
-
-  .style--light, .style--dark, .style--accent, .style--background-image {
-    .row__container {
-      width: 90% !important;
-    }
+    width: ~"calc(100% - 3rem)";
   }
 
   // Move spacing to first widget in the main zone (not sections)
   &.edit #page-zones__main-overlay + .widget:not(.row),
   #page-zones__main > .widget:not(.row):first-child {
     margin-top: @spacing__first--desktop;
-
-    @media @tablet {
-      margin-top: @spacing__first--tablet;
-    }
-    @media @mobile {
-      margin-top: @spacing__first--mobile;
-    }
   }
 
   // Move spacing to last widget in the main zone (not sections)
   #page-zones__main > .widget:not(.row):last-child {
-    margin-bottom: @spacing__first--desktop;
-
-    @media @tablet {
-      margin-bottom: @spacing__first--tablet;
-    }
-    @media @mobile {
-      margin-bottom: @spacing__first--mobile;
-    }
+    margin-bottom: 60px;
   }
 
   // Add spacing to the top of a widget when it follows a section
@@ -91,10 +88,9 @@
 
   // Adds spacing to the section when a widget is before it
   #page-zones__main > .widget:not(.row) + .row {
-    margin-bottom: @spacing--other;
     margin-top: @spacing--other;
 
-    &:not(:last-child) {
+    &:last-child {
          margin-bottom: 0;
     }
   }
